<resources>
    <string name="app_name">IkasFit</string>
    <string name="intro_text">Esperando usuario...</string>
    <string name="action_delete_data">Borrar datos del último año</string>
    <string name="action_about">Acerca de</string>
    <string name="action_googlefit">Conectar a GoogleFit</string>
    <string name="action_parse">Conectar a Parse</string>
    <string name="action_www">Visitar web</string>
    <string name="action_insert_random_data">Insertar datos del último año</string>
    <string name="button_read_data_content">Leer datos desde Google Fit</string>
    <string name="year">AÑO:   </string>
    <string name="month">MES:   </string>
    <string name="week">SEMANA:   </string>
    <string name="day">HOY:   </string>
    <string name="average">MEDIA DIARIA:   </string>
    <string name="unknown">-----</string>
    <string name="Account_Image">Account Icon</string>
    <string name="steps">●pasos</string>
    <string name="distance">●distancia</string>
    <string name="ranking">Tu posición:</string>
    <string name="number1">Primera posición:</string>
    <string name="total">Nº de participantes:</string>
</resources>

