<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_googlefit"
        android:icon="@drawable/ic_google_fit"
        android:title="@string/action_googlefit"
        android:orderInCategory="100"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_parse"
        android:icon="@drawable/ic_parse"
        android:title="@string/action_parse"
        android:orderInCategory="100"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_www"
        android:icon="@drawable/ic_www"
        android:title="@string/action_www"
        android:orderInCategory="100"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_delete_data"
        android:title="@string/action_delete_data"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_insert_random_data"
        android:title="@string/action_insert_random_data"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
