<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_activity_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_light"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/image_Acount"
        android:singleLine="true"
        android:text="@string/intro_text"
        android:textAlignment="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textIsSelectable="false" />


    <ImageView
        android:id="@+id/image_Acount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/title_text_view"
        android:contentDescription="@string/Account_Image"
        android:paddingRight="5dp"
        android:src="@drawable/ic_account_circle_black_24dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="2dp"
        android:layout_below="@+id/image_Acount"
        android:background="@android:color/white" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="2dp"
        android:layout_below="@+id/textView_label_steps"
        android:background="@android:color/white" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:layout_below="@+id/textView_total_value"
        android:background="@android:color/white" />

    <TextView
        android:id="@+id/textView_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/image_Acount"
        android:layout_marginRight="200dp"
        android:layout_marginTop="10dp"
        android:background="#00ffffff"
        android:text="@string/year" />

    <TextView
        android:id="@+id/textView_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView_year"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/textView_year"
        android:layout_below="@+id/textView_year"
        android:layout_marginTop="3dp"
        android:background="#00ffffff"
        android:text="@string/month" />

    <TextView
        android:id="@+id/textView_week"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView_year"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/textView_year"
        android:layout_below="@+id/textView_month"
        android:layout_marginTop="3dp"
        android:background="#00ffffff"
        android:text="@string/week" />

    <TextView
        android:id="@+id/textView_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView_year"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/textView_year"
        android:layout_below="@+id/textView_week"
        android:layout_marginTop="3dp"
        android:background="#00ffffff"
        android:text="@string/day" />

    <TextView
        android:id="@+id/textView_average"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView_year"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/textView_year"
        android:layout_below="@+id/textView_day"
        android:layout_marginTop="3dp"
        android:background="#00ffffff"
        android:text="@string/average" />

    <TextView
        android:id="@+id/textView_year_value_step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView_year"
        android:layout_alignBottom="@+id/textView_year"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="125dp"
        android:layout_marginTop="3dp"
        android:layout_toRightOf="@+id/textView_month"
        android:background="#f0d5b3"
        android:gravity="center_horizontal"
        android:text="@string/unknown"
        android:textColor="#3ecc45" />

    <TextView
        android:id="@+id/textView_month_value_step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView_year_value_step"
        android:layout_alignRight="@+id/textView_year_value_step"
        android:layout_below="@+id/textView_year_value_step"
        android:layout_marginTop="3dp"
        android:layout_toRightOf="@+id/textView_month"
        android:background="#f0d5b3"
        android:contextClickable="true"
        android:gravity="center_horizontal"
        android:text="@string/unknown"
        android:textColor="#3ecc45" />

    <TextView
        android:id="@+id/textView_week_value_step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView_year_value_step"
        android:layout_alignRight="@+id/textView_year_value_step"
        android:layout_below="@+id/textView_month_value_step"
        android:layout_marginTop="3dp"
        android:layout_toRightOf="@+id/textView_month"
        android:background="#f0d5b3"
        android:contextClickable="true"
        android:gravity="center_horizontal"
        android:text="@string/unknown"
        android:textColor="#3ecc45" />

    <TextView
        android:id="@+id/textView_day_value_step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView_year_value_step"
        android:layout_alignRight="@+id/textView_year_value_step"
        android:layout_below="@+id/textView_week_value_step"
        android:layout_marginTop="3dp"
        android:layout_toRightOf="@+id/textView_week"
        android:background="#f0d5b3"
        android:contextClickable="true"
        android:gravity="center_horizontal"
        android:text="@string/unknown"
        android:textColor="#3ecc45" />

    <TextView
        android:id="@+id/textView_average_value_step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView_year_value_step"
        android:layout_alignRight="@+id/textView_year_value_step"
        android:layout_below="@+id/textView_day_value_step"
        android:layout_marginTop="3dp"
        android:layout_toRightOf="@+id/textView_week"
        android:background="#f0d5b3"
        android:contextClickable="true"
        android:gravity="center_horizontal"
        android:text="@string/unknown"
        android:textColor="#3ecc45" />

    <TextView
        android:id="@+id/textView_year_value_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView_year_value_step"
        android:layout_alignBottom="@+id/textView_year_value_step"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="3dp"
        android:layout_toRightOf="@+id/textView_month_value_step"
        android:background="#f0d5b3"
        android:gravity="center_horizontal"
        android:text="@string/unknown"
        android:textColor="#4db7f1" />

    <TextView
        android:id="@+id/textView_month_value_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView_year_value_distance"
        android:layout_alignRight="@+id/textView_year_value_distance"
        android:layout_below="@+id/textView_year_value_distance"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="3dp"
        android:layout_toRightOf="@+id/textView_month_value_step"
        android:background="#f0d5b3"
        android:gravity="center_horizontal"
        android:text="@string/unknown"
        android:textColor="#4db7f1" />

    <TextView
        android:id="@+id/textView_week_value_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView_year_value_distance"
        android:layout_alignRight="@+id/textView_year_value_distance"
        android:layout_below="@+id/textView_month_value_distance"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="3dp"
        android:layout_toRightOf="@+id/textView_month_value_step"
        android:background="#f0d5b3"
        android:gravity="center_horizontal"
        android:text="@string/unknown"
        android:textColor="#4db7f1" />

    <TextView
        android:id="@+id/textView_day_value_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView_year_value_distance"
        android:layout_alignRight="@+id/textView_year_value_distance"
        android:layout_below="@+id/textView_week_value_distance"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="3dp"
        android:layout_toRightOf="@+id/textView_month_value_step"
        android:background="#f0d5b3"
        android:gravity="center_horizontal"
        android:text="@string/unknown"
        android:textColor="#4db7f1" />

    <TextView
        android:id="@+id/textView_average_value_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView_year_value_distance"
        android:layout_alignRight="@+id/textView_year_value_distance"
        android:layout_below="@+id/textView_day_value_distance"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="3dp"
        android:layout_toRightOf="@+id/textView_month_value_step"
        android:background="#f0d5b3"
        android:gravity="center_horizontal"
        android:text="@string/unknown"
        android:textColor="#4db7f1" />

    <TextView
        android:id="@+id/textView_label_steps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView_average_value_step"
        android:layout_alignStart="@+id/textView_average_value_step"
        android:layout_below="@+id/textView_average"
        android:background="#00ffffff"
        android:text="@string/steps"
        android:textColor="#3ecc45" />
    android:textColor="#3ecc45" />

    <TextView
        android:id="@+id/textView_label_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView_average_value_distance"
        android:layout_alignStart="@+id/textView_average_value_distance"
        android:layout_below="@+id/textView_average_value_distance"
        android:background="#00ffffff"
        android:text="@string/distance"
        android:textColor="#4db7f1" />

    <TextView
        android:id="@+id/textView_ranking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/textView_year"
        android:layout_below="@+id/textView_label_steps"
        android:layout_marginTop="10dp"
        android:background="#00ffffff"
        android:text="@string/ranking" />

    <TextView
        android:id="@+id/textView_number1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/textView_year"
        android:layout_below="@+id/textView_ranking"
        android:background="#00ffffff"
        android:text="@string/number1"
        android:layout_marginTop="3dp" />

    <TextView
        android:id="@+id/textView_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/textView_year"
        android:layout_below="@+id/textView_number1"
        android:background="#00ffffff"
        android:text="@string/total"
        android:layout_marginTop="3dp" />

    <TextView
        android:id="@+id/textView_ranking_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView_number1"
        android:layout_alignEnd="@+id/textView_year_value_step"
        android:layout_alignRight="@+id/textView_year_value_step"
        android:layout_marginTop="3dp"
        android:layout_toEndOf="@+id/textView_ranking"
        android:layout_toRightOf="@+id/textView_ranking"
        android:background="#f0d5b3"
        android:contextClickable="true"
        android:gravity="center_horizontal"
        android:text="@string/unknown" />

    <TextView
        android:id="@+id/textView_number1_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView_average_value_distance"
        android:layout_alignRight="@+id/textView_average_value_distance"
        android:layout_below="@+id/textView_ranking_value"
        android:layout_marginTop="3dp"
        android:layout_toRightOf="@+id/textView_ranking"
        android:background="#f0d5b3"
        android:contextClickable="true"
        android:gravity="center_horizontal"
        android:text="@string/unknown" />

    <TextView
        android:id="@+id/textView_total_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView_year_value_step"
        android:layout_alignRight="@+id/textView_year_value_step"
        android:layout_below="@+id/textView_number1_value"
        android:layout_marginTop="3dp"
        android:layout_toEndOf="@+id/textView_total"
        android:layout_toRightOf="@+id/textView_total"
        android:background="#f0d5b3"
        android:contextClickable="true"
        android:gravity="center_horizontal"
        android:text="@string/unknown" />

    <ScrollView
        android:id="@+id/log_scroll"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/textView_total_value"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="12dp"
        android:background="#f0d5b3">

        <com.zsoft.ivan.ikasfit.LogView
            android:id="@+id/sample_logview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foreground="@android:color/holo_orange_light"
            android:scrollbars="vertical"
            android:textSize="@dimen/abc_edit_text_inset_top_material" />
    </ScrollView>

</RelativeLayout>